# group-project-controller-code

./: .gitignore  README.md  actor.onnx  setup.py
scripts/: evaluate_ddpg_agent.py  extract_actor.py  generate_mlp_training_data.py  train_ddpg_agent.py
src/: __init__.py  constants.py  ddpg_agent.py  environment.py  replay.py  train.py  utils.py
src/environments/: __init__.py  basic_env.py  gazebo_env.py
src/gazebo/: __init__.py  controllers_connection.py  gazebo_connection.py
src/hunter2/config/: hunter2_config.yaml
src/hunter2/robot_envs/: hunter2_env.py
src/hunter2/task_envs/: hunter2_maze.py
src/hunter2_rl/: CMakeLists.txt  package.xml  setup.py
src/hunter2_rl/config/: hunter2_config.yaml
src/hunter2_rl/launch/: start_training_wall.launch
src/hunter2_rl/python_setup_script/: setup.py
src/hunter2_rl/src/hunter2_rl/: __init__.py  ddpg_agent.py  robot_gazebo_env.py  start_ddpg_wall.py
src/hunter2_rl/src/hunter2_rl/robot_envs/: hunter2_env.py
src/hunter2_rl/src/hunter2_rl/task_envs/: __init__.py  hunter2_maze.py
